# shallow-fission

./: .gitignore  .gitmodules  .travis.yml  Bs.hs  Fission1.hs  Fission2.hs  Mandel.hs  Matmult.hs  Nbody.hs  README.md  Random.hs  Test1.hs  Test2.hs  shallow-fission.cabal  stack.yaml  validate.sh
Data/: Split.hs
Data/Array/Accelerate/: Fission.hs
Data/Array/Accelerate/Fission/: Delayer.hs  Functions.hs  Runner.hs  Util.hs
benchmarks/: Blackscholes.hs  Mandelbrot.hs
icebox/: Fission2.hs
playground/: Froob.hs  Logic.hs  Test.hs  Test2.hs  Test3.hs  Test4.hs  Test5.hs
src2/Data/: Split.hs
src2/Data/Array/: Fission.hs
src2/Data/Array/Accelerate/: Fission.hs
tests/: Test.hs
tests/black-scholes/: Accelerate.hs  Main.hs
tests/black-scholes/src-acc/: BlackScholes.hs  Main.hs  test-blackscholes.cabal
tests/mandelbrot/: Main.hs
tests/mandelbrot/src-acc/: .gitignore  Main.hs  Mandel.hs  test-mandelbrot.cabal
tests/matrix-multiply/: Main.hs
tests/n-body/: Main.hs
tests/n-body/src-acc/: Main.hs  Solver.hs  test-nbody.cabal
tests/n-body/src-acc/Random/: Position.hs
tests/simple/: Matmult.hs  Test1.hs  Test2.hs
