name:                   shallow-fission
version:                0.1.0.0
-- synopsis:
-- description:
license:                BSD3
license-file:           LICENSE
author:                 Michael Vollmer
maintainer:             vollmerm@indiana.edu
-- copyright:
category:               Data
build-type:             Simple
-- extra-source-files:
cabal-version:          >=1.10


library
  default-language:    Haskell2010
  hs-source-dirs:      src2
  exposed-modules:
        Data.Array.Accelerate.Fission

  build-depends:
          base                  >= 4.7
        , accelerate            >= 2.0
        , mtl                   >= 2.0
        , accelerate-llvm
        , accelerate-llvm-native
        , accelerate-llvm-ptx
        , accelerate-random
        , mwc-random
        , parallel

  ghc-options:  -Wall

executable blackscholes
  default-language:    Haskell2010
  hs-source-dirs:      benchmarks
  main-is:             Blackscholes.hs
  ghc-options:          -Wall -O2 -threaded -fpedantic-bottoms -fno-full-laziness -fno-excess-precision -eventlog -rtsopts
  build-depends:
          base                  >= 4.7
        , accelerate            >= 2.0
        , mtl                   >= 2.0
        , accelerate-llvm
        , accelerate-llvm-native
        , accelerate-llvm-ptx
        , accelerate-random
        , mwc-random
        , parallel
        , criterion
        , shallow-fission

executable mandelbrot
  default-language:    Haskell2010
  hs-source-dirs:      benchmarks
  main-is:             Mandelbrot.hs
  ghc-options:          -Wall -O2 -threaded -fpedantic-bottoms -fno-full-laziness -fno-excess-precision -eventlog -rtsopts
  build-depends:
          base                  >= 4.7
        , accelerate            >= 2.0
        , mtl                   >= 2.0
        , accelerate-llvm
        , accelerate-llvm-native
        , accelerate-llvm-ptx
        , accelerate-random
        , mwc-random
        , parallel
        , criterion
        , shallow-fission
        , accelerate-io

