name:                   test-nbody
version:                0.1.0.0
-- synopsis:
-- description:
-- license:
-- license-file:           LICENSE
-- author:
-- maintainer:
-- copyright:
-- category:
build-type:             Simple
-- extra-source-files:
cabal-version:          >=1.10

executable test-nbody
  default-language:     Haskell2010
  main-is:              Main.hs
  other-modules:
      Common.Body
      Common.World
      Common.Type
      Common.Util
      Common.World
      Random.Position
      Solver

  build-depends:
        base                    >=4.7 && <4.9
      , accelerate
      , accelerate-cuda
      , accelerate-llvm-multidev
      , accelerate-llvm-native
      , accelerate-llvm-ptx
      , accelerate-random
      , criterion
      , cuda
      , sfmt

  ghc-options:        -threaded -O3

  -- required due to linker bugs in ghc-7.10.3 (AFAIK)
  if os(darwin)
    ghc-options:      -optl-Wl,-rpath,/usr/local/cuda/lib -lcudart -L/usr/local/cuda/lib

